--- a/slides.html
+++ b/slides.html
@@ -1,321 +1,162 @@
 <article>
   <h1>
-    Title Goes Here Up
-    <br>
-    To Two Lines
+    Twitter và cài đặt ứng dụng
   </h1>
-  <p>
-    Sergey Brin
-    <br>
-    May 10, 2011
-  </p>
+    <p>Giảng viên:</p> 
+    <h3>Nguyễn Trung Phú</h3>
+    <p>Nhóm 26:</p>
+    <h3>Phạm Khắc Tuy</h3>
+    <h3>Nguyễn Văn Ước</h3>
+    <h3>Hoàng Kim Thảo </h3>
 </article>
-
-<article>
-  <p>
-    This is a slide with just text. This is a slide with just text.
-    This is a slide with just text. This is a slide with just text.
-    This is a slide with just text. This is a slide with just text.
-  </p>
-  <p>
-    There is more text just underneath.
-  </p>
-</article>
-
 <article>
   <h3>
-    Simple slide with header and text
+    Nội dung chính:
   </h3>
   <p>
-    This is a slide with just text. This is a slide with just text.
-    This is a slide with just text. This is a slide with just text.
-    This is a slide with just text. This is a slide with just text.
-  </p>
-  <p>
-    There is more text just underneath with a <code>code sample: 5px</code>.
-  </p>
-</article>
-
-<article class='smaller'>
-  <h3>
-    Simple slide with header and text (small font)
-  </h3>
-  <p>
-    This is a slide with just text. This is a slide with just text.
-    This is a slide with just text. This is a slide with just text.
-    This is a slide with just text. This is a slide with just text.
-  </p>
-  <p>
-    There is more text just underneath with a <code>code sample: 5px</code>.
+    <ul>
+      <li>Twitter là gì? </li>
+      <li>API trên Twitter? </li>
+      <li>Cách tạo một ứng dụng với Twitter? </li>
+      <li>Một số ứng dụng. </li>
+      <li>Kết luận. </li>
+    </ul>
   </p>
 </article>
-
 <article>
   <h3>
-    Slide with bullet points and a longer title, just because we
-    can make it longer
+    Twitter là gì?
   </h3>
-  <ul>
-    <li>
-      Use this template to create your presentation
-    </li>
-    <li>
-      Use the provided color palette, box and arrow graphics, and
-      chart styles
-    </li>
-    <li>
-      Instructions are provided to assist you in using this
-      presentation template effectively
-    </li>
-    <li>
-      At all times strive to maintain Google's corporate look and feel
-    </li>
-  </ul>
-</article>
-
-<article>
-  <h3>
-    Slide with bullet points that builds
-  </h3>
+  <p>
+    - Twitter là dịch vụ mạng xã hội miễn phí cho phép người sử dụng đọc, nhắn và cập nhật các mẩu tin nhỏ gọi là tweet, một dạng tiểu blog.
+  </p>
   <ul class="build">
     <li>
-      This is an example of a list
+      Twitter là một mạng nhắn tin.
     </li>
     <li>
-      The list items fade in
+      Dùng Twitter để cập nhật tin tức.
     </li>
     <li>
-      Last one!
+      Twitter là công cụ marketing xã hội.
     </li>
   </ul>
-
-  <div class="build">
-    <p>Any element with child nodes can build.</p>
-    <p>It doesn't have to be a list.</p>
-  </div>
 </article>
 
-<article class='smaller'>
+<article>
   <h3>
-    Slide with bullet points (small font)
+    Các con số ấn tượng:
   </h3>
+  <p>
+    <img style='height: 500px' src='http://tko.name.vn/wordpress/6a00d83451b36c69e2014e872a175b970d800wi.gif'>
+  </p>
+
+</article>
+
+<article>
+  <h3>
+    Số lượng Tweet qua từng năm:
+  </h3>
+  <p>
+<ul>
+<li> 5.000 tweet/ngày trong năm 2007</li>
+<li> 300.000 tweet/ngày trong năm 2008 </li>
+<li> 2,5 triệu tweet/ngày trong năm 2009</li>
+<li> 50 triệu tiếng "tuýt"/ngày trong năm 2010</li>
+</ul>
+  </p>
+
+</article>
+<article>
+  <h3>
+   API trên Twitter?
+  </h3>
+<br/>
+<h4>API trên Twitter hiện nay có 2 phiên bản là:</h4>
+<ul>
+<li>API v1</li>
+<li>API v1.1</li>
+</ul>
+<br/>
+<h4>Các ngôn ngữ được hỗ trợ:</h4>
+<p>
+ActionScript/Flash, C++, Clojure, ColdFusion, Erlang, Java, JavaScript, .NET, Objective-C / Cocoa, Perl, <span class='blue'>PHP</span>, Python, Ruby, Scala
+</p>
+
+</article>
+
+<article>
+  <h3>
+    Thư viện hỗ trợ PHP trên Twitter:
+  </h3>
+<ul>
+<li><span class='blue'>Oauth-php</span> by Corollarium Technologies – an OAuth library for clients and providers</li>
+<li><span class='blue'>Services_Twitter (PEAR)</span> by Joe Stump, David Jean Louis and Bill Shupp – a Twitter API library</li>
+<li><span class='blue'>TmhOAuth</span> by Matt Harris – an OAuth library (supports file uploading)</li>
+<li><span class='blue'>TwitterOAuth</span> by Abraham Williams – a Twitter API library</li>
+<li><span class='blue'>Twitter async</span> by Jaisen Mathai – a wrapper for Twitter OAuth API (provides asynchronous calls)</li>
+</ul>
+</article>
+
+<article>
+  <h3>
+    Tạo một app trên Twitter:
+  </h3>
+<br/>
+
+<h4>Truy cập: <span class='blue'>https://twitter.com/</span></h4>
+<p>Tạo một tài khoản trên twitter.</p>
+<br/>
+<h4>Truy cập: <span class='blue'>https://dev.twitter.com/</span></h4>
+<p>Đăng nhập với tài khoản bên trên.</p>
+<br/>
+<h4>Truy cập: <span class='blue'>https://dev.twitter.com/apps/</span></h4>
+<p>Điền các thông tin và tạo một app trên Twitter.</p>
+</article>
+
+<article>
+  <h3>
+Một số ứng dụng:
+  </h3>
+<br/>
   <ul>
     <li>
-      Use this template to create your presentation
+      Đếm số lượng Follower
+    </li>
     <li>
-      Use the provided color palette, box and arrow graphics, and
-      chart styles
+      Hiển thị những người Follower
+    </li>
     <li>
-      Instructions are provided to assist you in using this
-      presentation template effectively
+      Tự động Tweet khi cập nhật bài mới trên Wordpress
+    </li>
     <li>
-      At all times strive to maintain Google's corporate look and feel
+      ...
+    </li>
+
   </ul>
 </article>
 
 <article>
   <h3>
-    Slide with a table
+    Kết luận:
   </h3>
-  <table>
-    <tr>
-      <th>
-        Name
-      <th>
-        Occupation
-    <tr>
-      <td>
-        Luke Mahe
-      <td>
-        V.P. of Keepin' It Real
-      <tr>
-        <td>
-          Marcin Wichary
-        <td>
-           The Michael Bay of Doodles
-  </table>
-</article>
-
-<article class='smaller'>
-  <h3>
-    Slide with a table (smaller text)
-  </h3>
-  <table>
-    <tr>
-      <th>
-        Name
-      <th>
-        Occupation
-    <tr>
-      <td>
-        Luke Mahe
-      <td>
-        V.P. of Keepin' It Real
-      <tr>
-        <td>
-          Marcin Wichary
-        <td>
-           The Michael Bay of Doodles
-  </table>
+<br/>
+<p>
+Mặc dù đứng thứ 3 về sự phổ biến hiện nay của Twitter nhưng độ tin cậy, số người dùng thực tế và tiện dụng qua thiết bị di động và SMS sẽ hứa hẹn sự phát triển hơn nữa so với các đối thủ mạng xã hội khác.
+</p>
 </article>
 
 <article>
-  <h3>
-    Styles
-  </h3>
-  <ul>
-    <li>
-      <span class='red'>class="red"</span>
-    <li>
-      <span class='blue'>class="blue"</span>
-    <li>
-      <span class='green'>class="green"</span>
-    <li>
-      <span class='yellow'>class="yellow"</span>
-    <li>
-      <span class='black'>class="black"</span>
-    <li>
-      <span class='white'>class="white"</span>
-    <li>
-      <b>bold</b> and <i>italic</i>
-  </ul>
+  <h1>
+    XIN CHÂN THÀNH CẢM ƠN!
+  </h1>
+
 </article>
 
-<article>
-  <h2>
-    Segue slide
-  </h2>
-</article>
 
-<article>
-  <h3>
-    Slide with an image
-  </h3>
-  <p>
-    <img style='height: 500px' src='/images/example-graph.png'>
-  </p>
-  <div class='source'>
-    Source: Sergey Brin
-  </div>
-</article>
 
-<article>
-  <h3>
-    Slide with an image (centered)
-  </h3>
-  <p>
-    <img class='centered' style='height: 500px' src='/images/example-graph.png'>
-  </p>
-  <div class='source'>
-    Source: Larry Page
-  </div>
-</article>
 
-<article class='fill'>
-  <h3>
-    Image filling the slide (with optional header)
-  </h3>
-  <p>
-    <img src='/images/example-cat.jpg'>
-  </p>
-  <div class='source white'>
-    Source: Eric Schmidt
-  </div>
-</article>
 
-<article>
-  <h3>
-    This slide has some code
-  </h3>
-  <section>
-    <pre>
-&lt;script type='text/javascript'&gt;
-  // Say hello world until the user starts questioning
-  // the meaningfulness of their existence.
-  function helloWorld(world) {
-    for (var i = 42; --i &gt;= 0;) {
-      alert('Hello ' + String(world));
-    }
-  }
-&lt;/script&gt;
-&lt;style&gt;
-  p { color: pink }
-  b { color: blue }
-  u { color: 'umber' }
-&lt;/style&gt;
-    </pre>
-  </section>
-</article>
 
-<article class='smaller'>
-  <h3>
-    This slide has some code (small font)
-  </h3>
-  <section>
-    <pre>
-&lt;script type='text/javascript'&gt;
-  // Say hello world until the user starts questioning
-  // the meaningfulness of their existence.
-  function helloWorld(world) {
-    for (var i = 42; --i &gt;= 0;) {
-      alert('Hello ' + String(world));
-    }
-  }
-&lt;/script&gt;
-&lt;style&gt;
-  p { color: pink }
-  b { color: blue }
-  u { color: 'umber' }
-&lt;/style&gt;
-    </pre>
-  </section>
-</article>
 
-<article>
-  <q>
-    The best way to predict the future is to invent it.
-  </q>
-  <div class='author'>
-    Alan Kay
-  </div>
-</article>
 
-<article class='smaller'>
-  <q>
-    A distributed system is one in which the failure of a computer 
-    you didn't even know existed can render your own computer unusable.
-  </q>
-  <div class='author'>
-    Leslie Lamport
-  </div>
-</article>
-
-<article class='nobackground'>
-  <h3>
-    A slide with an embed + title
-  </h3>
-  
-  <iframe src='http://www.google.com/doodle4google/history.html'></iframe>
-</article>
-
-<article class='nobackground'>
-  <iframe src='http://www.google.com/doodle4google/history.html'></iframe>
-</article>
-
-<article class='fill'>
-  <h3>
-    Full-slide embed with (optional) slide title on top
-  </h3>
-  <iframe src='http://www.google.com/doodle4google/history.html'></iframe>
-</article>
-
-<article>
-  <h3>
-    Thank you!
-  </h3>
-  
-  <ul>
-    <li>
-      <a href='http://www.google.com'>google.com</a>
-  </ul>
-</article>
